--- a/tours.html
+++ b/tours.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li class="name">Slack</li>
-        <li><a class="highlighted" href="index.html">Home</li>
-        <li><a href="tours.html">Tours</li>
+        <li><a href="index.html">Home</li>
+        <li><a class="highlighted" href="tours.html">Tours</li>
         <li><a href="prices.html">Prices</li>
         <li><a href="sign-up.html">Sign-up</li>
       </ul>
@@ -20,10 +20,6 @@
   </header>
   <h1>Slack is the most innovative platform yet</h1>
   <img src="images/write-593333_960_720.jpg"></img>
-
-  <h2>Features</h2>
-  <p>Unlimited messaging to co-workers</p>
-  <img src="images/images.png"></img>
 
 </body>
 </html>
