Ariculate different html values

--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
   <h1>Slack is the most innovative platform yet</h1>
   <img src="images/write-593333_960_720.jpg"></img>
 
-  <h2>Features</h2>
-  <p>Unlimited messaging to co-workers</p>
-  <img src="images/images.png"></img>
+  <div>
+    <h2>Features</h2>
+    <p>Unlimited messaging to co-workers</p>
+    <p>Free cloud synicing</p>
+    <img src="images/images.png"></img>
+  </div>
 
+  <div>
+    <h2>Lots of plans</h2>
+    <p>Text-to-speech recognition</p>
+    <p>Facetime capabilites</p>
+    <img src="images/images1.png"></img>
+  </div>
+<footer>Copyright© TM</footer>
 </body>
 </html>
