--- a/tours.html
+++ b/tours.html
@@ -18,8 +18,36 @@
       </ul>
     </nav>
   </header>
-  <h1>Slack is the most innovative platform yet</h1>
-  <img src="images/write-593333_960_720.jpg"></img>
-
+  <h1>With a wide selection features, come and take a tour</h1>
+  <img src="images/telephone-3187091_960_720.jpg"></img>
+  <p>The following features are not available to people using tablets however the airwave technology is very useful when used in the office or for personal reasons. Many messaging features allow the user to use multiple tabs to make multitasking a breeze when added to the site and streaming services are also available.</p>
+  <table>
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Basic</td>
+        <td>$4.99</td>
+      </tr>
+      <tr>
+        <td>Medium</td>
+        <td>$7.99</td>
+      </tr>
+      <tr>
+        <td>Premium</td>
+        <td>$12.99</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th scope="total">Total</th>
+        <td>$25.99</td>
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
