Dial the computer tab

--- a/tours.html
+++ b/tours.html
@@ -21,31 +21,36 @@
   <h1>With a wide selection features, come and take a tour</h1>
   <img src="images/telephone-3187091_960_720.jpg"></img>
   <p>The following features are not available to people using tablets however the airwave technology is very useful when used in the office or for personal reasons. Many messaging features allow the user to use multiple tabs to make multitasking a breeze when added to the site and streaming services are also available.</p>
-  <table>
+  <table border="1">
     <thead>
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Price</th>
+        <th scope="col">Features</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Basic</td>
+        <td scope="row">Basic</td>
         <td>$4.99</td>
+        <td>Free 200MB of data and free voice calling</td>
       </tr>
       <tr>
-        <td>Medium</td>
+        <td scope="row">Medium</td>
         <td>$7.99</td>
+        <td>Free 2GB of data and free voice calling</td>
       </tr>
       <tr>
-        <td>Premium</td>
+        <td scope="row">Premium</td>
         <td>$12.99</td>
+        <td>Free 10GB of data and free voice calling</td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
-        <th scope="total">Total</th>
+        <th scope="row">Total</th>
         <td>$25.99</td>
+        <td>*24/7 support with four-hour response time. Available to US and Canadian residents only. Prices are subject to change without notice.</td>
       </tr>
     </tfoot>
   </table>
