Add more headers to the table

--- a/tours.html
+++ b/tours.html
@@ -33,24 +33,24 @@
       <tr>
         <td scope="row">Basic</td>
         <td>$4.99</td>
-        <td>Free 200MB of data and free voice calling</td>
+        <td>Free 200MB of data and free voice calling, basic group chat, and 1 hour of technical support</td>
       </tr>
       <tr>
         <td scope="row">Medium</td>
         <td>$7.99</td>
-        <td>Free 2GB of data and free voice calling</td>
+        <td>Free 2GB of data and free voice calling, access to hundreds of third-party apps, unlimited technical support, and video chat with up to 15 recipients</td>
       </tr>
       <tr>
         <td scope="row">Premium</td>
         <td>$12.99</td>
-        <td>Free 10GB of data and free voice calling</td>
+        <td>Free 10GB of data and free voice calling, access to hundreds of third-party apps, free cloud syncing to all adobe creative suite apps, unlimited video chat, unlimited memory storage and unlimted live streaming and conference calls.</td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
         <th scope="row">Total</th>
         <td>$25.99</td>
-        <td>*24/7 support with four-hour response time. Available to US and Canadian residents only. Prices are subject to change without notice.</td>
+        <td class="micro">*24/7 support with four-hour response time. Available to US and Canadian residents only. Prices are subject to change without notice.</td>
       </tr>
     </tfoot>
   </table>
