--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Slack Website</title>
   <link href="css/main.css" rel="stylesheet">
-
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
 </head>
 <body>
   <header>
