--- a/index.html
+++ b/index.html
@@ -6,35 +6,55 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="grid bannercolor">
+    <div class="unit m-1">
+    <h1 class="name">Slack</h1>
+    </div>
+    <nav class="unit m">
       <ul>
-        <li class="name">Slack</li>
-        <li><a class="highlighted" href="index.html">Home</li>
+        <li><a href="index.html">Home</li>
         <li><a href="tours.html">Tours</li>
         <li><a href="prices.html">Prices</li>
         <li><a href="sign-up.html">Sign-up</li>
       </ul>
     </nav>
   </header>
-  <h1>Slack is the most innovative platform yet</h1>
-  <img src="images/write-593333_960_720.jpg"></img>
+  <div class="grid">
+    <div class="unit unit-m-1-2">
+      <img src=images/person-taking-notes.jpg></img>
+    </div>
 
-  <div>
-    <h2>Features</h2>
-    <p>Unlimited messaging to co-workers</p>
-    <p>Free cloud synicing</p>
-    <img src="images/images.png"></img>
-  </div>
+    <div class="unit unit-m-1-2">
+      <h2 class="gutter">Features</h2>
+      <p>Unlimited messaging to co-workers</p>
+      <p>Free cloud syncing</p>
+    </div>
 
-  <div>
-    <h2>Lots of plans</h2>
-    <p>Text-to-speech recognition</p>
-    <p>Facetime capabilites</p>
-    <img src="images/images1.png"></img>
+    <div class="unit unit-m-1-2">
+      <h2>Workspaces</h2>
+      <p>Free ad-to-screen social networking</p>
+      <p>Detailed status updates</p>
+      <p>Live video messaging</p>
+    </div>
+
+    <div class="grid">
+      <div class="unit unit-m-1-2">
+        <img src=images/ocean.jpg></img>
+      </div>
   </div>
-<footer>Copyright© TM</footer>
+<foot>
+  <head>
+    <meta charset="utf-8">
+    <title>Slack Website</title>
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/type.css" rel="stylesheet">
+    <link href="css/modules.css" rel="stylesheet">
+  </head>
+</foot>
+
 </body>
 </html>
