--- a/prices.html
+++ b/prices.html
@@ -7,19 +7,25 @@
 
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="grid bannercolor">
+    <div class="unit m">
+    <h1 class="name">Slack</h1>
+    </div>
+    <nav class="unit m">
       <ul>
-        <li class="name">Slack</li>
-        <li><a href="index.html">Home</li>
+        <li><a class="highlighted" href="index.html">Home</li>
         <li><a href="tours.html">Tours</li>
-        <li><a class="highlighted" href="prices.html">Prices</li>
+        <li><a href="prices.html">Prices</li>
         <li><a href="sign-up.html">Sign-up</li>
       </ul>
     </nav>
   </header>
-  <h1>Slack is the most innovative platform yet</h1>
-  <img src="images/write-593333_960_720.jpg"></img>
+  <img src="images/person-taking-notes.jpg"></img>
 
+  <div class="bmp">
+  <p class="basic">Basic $4.99</p>
+  <p class="medium">Medium $7.99</p>
+  <p class="premium">Premium $12.99</p>
+  </div>
 </body>
 </html>
