--- a/tours.html
+++ b/tours.html
@@ -7,45 +7,52 @@
 
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="grid bannercolor">
+    <div class="unit m">
+    <h1 class="name">Slack</h1>
+    </div>
+    <nav class="unit m">
       <ul>
-        <li class="name">Slack</li>
-        <li><a href="index.html">Home</li>
-        <li><a class="highlighted" href="tours.html">Tours</li>
+        <li><a class="highlighted" href="index.html">Home</li>
+        <li><a href="tours.html">Tours</li>
         <li><a href="prices.html">Prices</li>
         <li><a href="sign-up.html">Sign-up</li>
       </ul>
     </nav>
   </header>
-  <h1>With a wide selection features, come and take a tour</h1>
-  <img src="images/telephone-3187091_960_720.jpg"></img>
-  <p>The following features are not available to people using tablets however the airwave technology is very useful when used in the office or for personal reasons. Many messaging features allow the user to use multiple tabs to make multitasking a breeze when added to the site and streaming services are also available.</p>
-  <table border="1">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Price</th>
-        <th scope="col">Features</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td scope="row">Basic</td>
-        <td>$4.99</td>
-        <td>Free 200MB of data and free voice calling, basic group chat, and 1 hour of technical support</td>
-      </tr>
-      <tr>
-        <td scope="row">Medium</td>
-        <td>$7.99</td>
-        <td>Free 2GB of data and free voice calling, access to hundreds of third-party apps, unlimited technical support, and video chat with up to 15 recipients</td>
-      </tr>
-      <tr>
-        <td scope="row">Premium</td>
-        <td>$12.99</td>
-        <td>Free 10GB of data and free voice calling, access to hundreds of third-party apps, free cloud syncing to all adobe creative suite apps, unlimited video chat, unlimited memory storage and unlimted live streaming and conference calls.</td>
-      </tr>
-    </tbody>
+  <div class="grid">
+    <div class="unit m-1-2">
+      <img src="images/person-taking-notes.jpg"></img>
+      <p class="caption">The following features are not available to people using tablets however the airwave technology is very useful when used in the office or for personal reasons. Many messaging features allow the user to use multiple tabs to make multitasking a breeze when added to the site and streaming services are also available.</p>
+    </div>
+    <div class="unit m-1-2 island-2">
+      <table class="island-2" border="1">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Features</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row">Basic</td>
+            <td>$4.99</td>
+            <td>Free 200MB of data and free voice calling, basic group chat, and 1 hour of technical support</td>
+          </tr>
+          <tr>
+            <td scope="row">Medium</td>
+            <td>$7.99</td>
+            <td>Free 2GB of data and free voice calling, access to hundreds of third-party apps, unlimited technical support, and video chat with up to 15 recipients</td>
+          </tr>
+          <tr>
+            <td scope="row">Premium</td>
+            <td>$12.99</td>
+            <td>Free 10GB of data and free voice calling, access to hundreds of third-party apps, free cloud syncing to all adobe creative suite apps, unlimited video chat, unlimited memory storage and unlimted live streaming and conference calls.</td>
+          </tr>
+        </tbody>
+    </div>
+  </div>
     <tfoot>
       <tr>
         <th scope="row">Total</th>
